# ESP32-S3

./: .gitignore  CMakeLists.txt  IO分配表.xlsx  MCPWM函数.txt  S3.xmind  gdbinit.bat  note.c  partitions.csv  sdkconfig  sdkconfig.old  暂存.txt  环境配置说明.txt  硬件.txt
ES32-S3资料/: ESP32-S3卖家资料.7z
ES32-S3资料/ESP32-S3卖家资料/: ESP32-IDF-web.txt  ESP32-S3-DevKitC-1-datasheet.txt
components/Drivers/: ADC.c  ADC.h  AS5600.c  AS5600.h  CMakeLists.txt  Camera.c  Camera.h  DataType.c  DataType.h  FOC.c  FOC.h  GPIO.c  GPIO.h  HTTP_Server.c  HTTP_Server.h  IIC.c  IIC.h  Key.c  Key.h  MathFun.c  MathFun.h  MorseCode.c  MorseCode.h  OTA.c  OTA.h  PID.c  SDIO.c  SDIO.h  TCP_Client.c  TCP_Client.h  TCP_Server.c  TCP_Server.h  TemperatureSensor.c  TemperatureSensor.h  Timer.c  Timer.h  UART.c  UART.h  UDP_Client.c  UDP_Client.h  (+4 more)
components/Drivers/data/: index.html
components/LED/: CMakeLists.txt
components/LED/include/: led_strip.h
components/LED/src/: led_strip_api.c
components/MPU6050/: CMakeLists.txt
components/MPU6050/include/: mpu6050.h
components/MPU6050/test/: CMakeLists.txt  mpu6050_test.c
components/Main_UI/: CMakeLists.txt  Face.c  Face.h  LVGL_UI.c  LVGL_UI.h
components/UI/: MainUI.c  filelist.txt  ui.c  ui.h
components/UI/fonts/: ui_font_Font1.c
components/UI/images/: ui_img_akf_gg_png.c  ui_img_akf_line_png.c  ui_img_centerindec_png.c  ui_img_eye_1_png.c  ui_img_eye_2_png.c  ui_img_eye_3_png.c  ui_img_eye_png.c  ui_img_eye_r_png.c  ui_img_eye_rr_png.c  ui_img_mainindector_png.c  ui_img_secondbg_png.c  ui_img_secondindec_png.c  ui_img_smallindecotr_1_png.c  ui_img_triangle_png.c
components/UI/screens/: ui_BoostModeA.c  ui_BoostModeB.c  ui_Screen1.c
components/lvgl/: Kconfig  lv_conf_template.h
components/lvgl/demos/: lv_demos.h
components/lvgl/env_support/cmake/: esp.cmake
components/lvgl/examples/widgets/table/: lv_example_table_2.c
components/lvgl/src/: lv_conf_internal.h  lv_conf_kconfig.h
components/lvgl/src/core/: lv_event.h
components/lvgl/src/extra/libs/png/: lv_png.c
components/lvgl_esp32_drivers/: CMakeLists.txt  lvgl_helpers.c  lvgl_helpers.h  lvgl_spi_conf.h
components/lvgl_esp32_drivers/lvgl_tft/: st7789.c
components/porting/: CMakeLists.txt  lv_port_disp.c  lv_port_indev.c  lv_port_indev.h
main/: CMakeLists.txt  hello_world_main.c  main.c  main.h  升级服务.bat
